--- a/treebolicServicesLib/build.gradle
+++ b/treebolicServicesLib/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'com.android.library'
 
+//noinspection GroovyMissingReturnStatement
 android {
-    compileSdkVersion 23
+    compileSdkVersion 25
     buildToolsVersion "25.0.2"
 
+    //noinspection GroovyMissingReturnStatement
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 25
     }
 
     buildTypes {
