--- a/treebolicWordNetServices/src/main/AndroidManifest.xml
+++ b/treebolicWordNetServices/src/main/AndroidManifest.xml
@@ -6,10 +6,6 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="23" />
-
     <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -18,7 +14,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:process="org.treebolic" >
+        android:process="org.treebolic"
+        tools:ignore="AllowBackup">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
