--- a/treebolicFilesServices/build.gradle
+++ b/treebolicFilesServices/build.gradle
@@ -23,10 +23,11 @@ android {
 dependencies {
     compile project(':treebolicServicesLib')
     compile project(':treebolicClientsLib')
-
     compile project(':storageLib')
     compile project(':fileChooserLib')
     compile project(':searchLib')
-
     compile files('libs/treebolic-provider-files.jar')
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:support-v4:25.2.0'
+    compile project(path: ':preferenceLib')
 }
