--- a/treebolicFilesServices/src/main/AndroidManifest.xml
+++ b/treebolicFilesServices/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:process="org.treebolic"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/CompatAppTheme"
         tools:ignore="AllowBackup,UnusedAttribute" >
         <activity
             android:name=".MainActivity"
