--- a/treebolicOwlServices/build.gradle
+++ b/treebolicOwlServices/build.gradle
@@ -23,12 +23,12 @@ android {
 dependencies {
     compile project(':treebolicServicesLib')
     compile project(':treebolicClientsLib')
-
     compile project(':downloadLib')
     compile project(':fileChooserLib')
     compile project(':storageLib')
     compile project(':preferenceLib')
     compile project(':searchLib')
-
     compile files('libs/treebolic-provider-owl-owlapi-min.jar')
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:support-v4:25.2.0'
 }
