--- a/treebolicWordNetServices/build.gradle
+++ b/treebolicWordNetServices/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile project(':treebolicClientsLib')
     compile project(':downloadLib')
     compile project(':preferenceLib')
+    compile project(':searchLib')
     compile files('libs/commons-compress-proguard-1.8.1.jar')
     compile files('libs/treebolic-provider-wordnet-jwi-nodata.jar')
     compile 'com.android.support:appcompat-v7:25.2.0'
