--- a/treebolicClientsLib/build.gradle
+++ b/treebolicClientsLib/build.gradle
@@ -20,13 +20,16 @@ android {
 }
 
 dependencies {
-    compile files('libs/treebolic-service-iface.jar')
-    provided files('libs/treebolic-iface.jar')
-    provided files('libs/treebolic-parcel.jar')
-    provided files('libs/treebolic-provider.jar')
+    compile project(':treebolicServicesIface')
+    compile project(':treebolicClientsIface')
+    compile project(':treebolicLibModel')
+    compile project(':treebolicParcel')
+    compile project(':treebolicIface')
+    compile project(':treebolicGlue')
+
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:support-v4:25.2.0'
-    provided files('libs/treebolic-glue.jar')
+
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
