--- a/treebolicOwlServices/build.gradle
+++ b/treebolicOwlServices/build.gradle
@@ -21,8 +21,10 @@ android {
 }
 
 dependencies {
+    compile project(':treebolicServicesIface')
     compile project(':treebolicServicesLib')
-    //compile project(':treebolicClientsLib')
+    compile project(':treebolicClientsIface')
+    compile project(':treebolicClientsLib')
 
     compile project(':downloadLib')
     compile project(':fileChooserLib')
