--- a/treebolicServicesIface/build.gradle
+++ b/treebolicServicesIface/build.gradle
@@ -1,20 +1,22 @@
 apply plugin: 'com.android.library'
 
-//noinspection GroovyMissingReturnStatement
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
 
-    //noinspection GroovyMissingReturnStatement
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 25
-    }
+        versionCode 1
+        versionName "1.0"
 
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+    }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -22,15 +24,13 @@ android {
 dependencies {
     compile project(':treebolicParcel')
     compile project(':treebolicIface')
-    compile project(':treebolicGlueIface')
-    compile project(':treebolicGlue')
-    compile project(':treebolicGraph')
-    compile project(':treebolicMutable')
-    compile project(':treebolicServicesIface')
     compile project(':treebolicClientsIface')
 
-    testCompile 'junit:junit:4.12'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:25.3.1'
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testCompile 'junit:junit:4.12'
 }
