--- a/treebolicAidl/build.gradle
+++ b/treebolicAidl/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
+    aidlPackageWhiteList "org/treebolic/services/iface/ITreebolicAIDLService.aidl"
 
     defaultConfig {
         minSdkVersion 14
@@ -11,8 +12,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -21,15 +22,13 @@ android {
     }
 }
 
+/*
+apply plugin: 'java'
+
 dependencies {
-    compile project(':treebolicParcel')
-    compile project(':treebolicIface')
-    compile project(':treebolicAidl')
-    compile project(':treebolicClientsIface')
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    testCompile 'junit:junit:4.12'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
+
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
+*/
