--- a/treebolicServicesLib/build.gradle
+++ b/treebolicServicesLib/build.gradle
@@ -26,9 +26,9 @@ dependencies {
     compile project(':treebolicGlue')
     compile project(':treebolicGraph')
     compile project(':treebolicMutable')
+    compile project(':treebolicAidl')
     compile project(':treebolicServicesIface')
     compile project(':treebolicClientsIface')
-
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
