--- a/treebolicClientsIface/build.gradle
+++ b/treebolicClientsIface/build.gradle
@@ -24,7 +24,7 @@ android {
 dependencies {
     compile project(':treebolicLibModel')
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    provided 'com.android.support:appcompat-v7:25.3.1'
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
