--- a/treebolicClientsLib/build.gradle
+++ b/treebolicClientsLib/build.gradle
@@ -27,8 +27,9 @@ dependencies {
     compile project(':treebolicParcel')
     compile project(':treebolicIface')
     compile project(':treebolicGlue')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
+    provided 'com.android.support:appcompat-v7:25.3.1'
+    provided 'com.android.support:support-v4:25.3.1'
+
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
