--- a/treebolicFilesServices/build.gradle
+++ b/treebolicFilesServices/build.gradle
@@ -28,9 +28,10 @@ dependencies {
 
     compile project(':storageLib')
     compile project(':fileChooserLib')
-    compile project(':searchLib')
+    compile project(':preferenceLib')
+
     compile files('libs/treebolic-provider-files.jar')
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
-    compile project(path: ':preferenceLib')
 }
