--- a/treebolicServicesIface/build.gradle
+++ b/treebolicServicesIface/build.gradle
@@ -27,7 +27,8 @@ dependencies {
     compile project(':treebolicAidl')
     compile project(':treebolicClientsIface')
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    provided 'com.android.support:appcompat-v7:25.3.1'
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
