--- a/treebolicClientsLib/build.gradle
+++ b/treebolicClientsLib/build.gradle
@@ -1,11 +1,9 @@
 apply plugin: 'com.android.library'
 
-//noinspection GroovyMissingReturnStatement
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
 
-    //noinspection GroovyMissingReturnStatement
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 25
@@ -27,6 +25,7 @@ dependencies {
     compile project(':treebolicParcel')
     compile project(':treebolicIface')
     compile project(':treebolicGlue')
+    compile project(':commonLib')
     provided 'com.android.support:appcompat-v7:25.3.1'
     provided 'com.android.support:support-v4:25.3.1'
 
