--- a/treebolicOwlServices/src/main/AndroidManifest.xml
+++ b/treebolicOwlServices/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
     package="org.treebolic.owl.service"
     android:installLocation="auto"
     android:sharedUserId="org.treebolic.userId"
-    android:versionCode="18"
-    android:versionName="1.18" >
+    android:versionCode="20"
+    android:versionName="1.20" >
 
     <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -17,7 +17,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/CompatAppTheme"
+        android:theme="@style/MyTheme"
         tools:ignore="AllowBackup,UnusedAttribute" >
 
         <activity
