--- a/treebolicWordNetServices/src/main/AndroidManifest.xml
+++ b/treebolicWordNetServices/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="org.treebolic.wordnet.service"
           android:sharedUserId="org.treebolic.userId"
-          android:versionCode="18"
-          android:versionName="1.18">
+          android:versionCode="20"
+          android:versionName="1.20">
 
 	<uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
@@ -15,7 +15,7 @@
 		android:allowBackup="true"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
-		android:theme="@style/CompatAppTheme"
+		android:theme="@style/MyTheme"
 		tools:ignore="AllowBackup">
 
 		<activity
