--- a/treebolicWordNetServices/src/main/AndroidManifest.xml
+++ b/treebolicWordNetServices/src/main/AndroidManifest.xml
@@ -23,7 +23,6 @@
 			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
-
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
@@ -32,32 +31,32 @@
 			android:name=".SettingsActivity"
 			android:label="@string/title_activity_settings"
 			android:parentActivityName=".MainActivity"
-			tools:ignore="UnusedAttribute">
+			tools:targetApi="jelly_bean">
 		</activity>
 
 		<activity
 			android:name=".QueryProviderActivity"
 			android:label="@string/title_activity_query_file_provider"
 			android:parentActivityName=".MainActivity"
-			tools:ignore="UnusedAttribute">
+			tools:targetApi="jelly_bean">
 		</activity>
 
 		<activity
 			android:name=".DownloadActivity"
 			android:label="@string/title_activity_download"
 			android:parentActivityName=".MainActivity"
-			tools:ignore="UnusedAttribute">
+			tools:targetApi="jelly_bean">
 		</activity>
 
 		<service
 			android:name=".TreebolicWordNetIntentService"
-			android:process="org.treebolic"
 			android:description="@string/description_service_intent_service"
 			android:enabled="true"
 			android:exported="true"
 			android:icon="@drawable/ic_launcher"
 			android:label="@string/service_intent_service"
-			android:permission="android.permission.READ_EXTERNAL_STORAGE">
+			android:permission="android.permission.READ_EXTERNAL_STORAGE"
+			android:process="org.treebolic">
 			<intent-filter>
 				<action android:name="org.treebolic.service.action.MAKE_MODEL">
 				</action>
@@ -79,13 +78,13 @@
 
 		<service
 			android:name=".TreebolicWordNetAIDLBoundService"
-			android:process="org.treebolic"
 			android:description="@string/description_service_aidl_bound_service"
 			android:enabled="true"
 			android:exported="true"
 			android:icon="@drawable/ic_launcher"
 			android:label="@string/service_aidl_bound_service"
-			android:permission="android.permission.READ_EXTERNAL_STORAGE">
+			android:permission="android.permission.READ_EXTERNAL_STORAGE"
+			android:process="org.treebolic">
 		</service>
 
 		<service
