--- a/treebolicOwlServices/src/main/AndroidManifest.xml
+++ b/treebolicOwlServices/src/main/AndroidManifest.xml
@@ -1,92 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="org.treebolic.owl.service"
-    android:installLocation="auto"
-    android:sharedUserId="org.treebolic.userId"
-    android:versionCode="20"
-    android:versionName="1.20" >
+          xmlns:tools="http://schemas.android.com/tools"
+          package="org.treebolic.owl.service"
+          android:installLocation="auto"
+          android:sharedUserId="org.treebolic.userId"
+          android:versionCode="20"
+          android:versionName="1.20">
 
-    <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER"/>
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/MyTheme"
-        tools:ignore="AllowBackup,UnusedAttribute" >
+	<application
+		android:allowBackup="true"
+		android:icon="@drawable/ic_launcher"
+		android:label="@string/app_name"
+		android:supportsRtl="true"
+		android:theme="@style/MyTheme"
+		tools:ignore="AllowBackup,UnusedAttribute">
 
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+		<activity
+			android:name=".MainActivity"
+			android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+		<activity
+			android:name=".SettingsActivity"
+			android:label="@string/title_activity_settings"
+			android:parentActivityName=".MainActivity"
+			tools:targetApi="jelly_bean">
+		</activity>
 
-        <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:parentActivityName=".MainActivity"
-            tools:ignore="UnusedAttribute" >
-        </activity>
+		<activity
+			android:name=".DownloadActivity"
+			android:label="@string/title_activity_download"
+			android:parentActivityName=".MainActivity"
+			tools:targetApi="jelly_bean">
+		</activity>
 
-        <activity
-            android:name=".DownloadActivity"
-            android:label="@string/title_activity_download"
-            android:parentActivityName=".MainActivity"
-            tools:ignore="UnusedAttribute" >
-        </activity>
+		<activity
+			android:name="org.treebolic.filechooser.FileChooserActivity"
+			android:parentActivityName=".MainActivity"
+			tools:targetApi="jelly_bean">
+		</activity>
 
-        <activity
-            android:name="org.treebolic.filechooser.FileChooserActivity"
-            android:exported="false"
-            tools:ignore="MissingRegistered" >
-        </activity>
+		<service
+			android:name=".TreebolicOwlIntentService"
+			android:description="@string/description_service_intent_service"
+			android:enabled="true"
+			android:exported="true"
+			android:icon="@drawable/ic_launcher"
+			android:label="@string/service_intent_service"
+			android:permission="android.permission.READ_EXTERNAL_STORAGE"
+			android:process="org.treebolic">
+			<intent-filter>
+				<action android:name="org.treebolic.service.action.MAKE_MODEL">
+				</action>
+			</intent-filter>
+		</service>
 
-        <service
-            android:name=".TreebolicOwlIntentService"
-            android:process="org.treebolic"
-            android:description="@string/description_service_intent_service"
-            android:enabled="true"
-            android:exported="true"
-            android:icon="@drawable/ic_launcher"
-            android:label="@string/service_intent_service"
-            android:permission="android.permission.READ_EXTERNAL_STORAGE" >
-            <intent-filter>
-                <action android:name="org.treebolic.service.action.MAKE_MODEL" >
-                </action>
-            </intent-filter>
-        </service>
+		<service
+			android:name=".TreebolicOwlAIDLBoundService"
+			android:description="@string/description_service_aidl_bound_service"
+			android:enabled="true"
+			android:exported="true"
+			android:icon="@drawable/ic_launcher"
+			android:label="@string/service_aidl_bound_service"
+			android:permission="android.permission.READ_EXTERNAL_STORAGE"
+			android:process="org.treebolic">
+		</service>
 
-        <service
-            android:name=".TreebolicOwlAIDLBoundService"
-            android:process="org.treebolic"
-            android:description="@string/description_service_aidl_bound_service"
-            android:enabled="true"
-            android:exported="true"
-            android:icon="@drawable/ic_launcher"
-            android:label="@string/service_aidl_bound_service"
-            android:permission="android.permission.READ_EXTERNAL_STORAGE" >
-        </service>
+		<service
+			android:name=".TreebolicOwlMessengerService"
+			android:description="@string/description_service_messenger_bound_service"
+			android:enabled="true"
+			android:exported="true"
+			android:icon="@drawable/ic_launcher"
+			android:label="@string/service_messenger_bound_service"
+			android:permission="android.permission.READ_EXTERNAL_STORAGE"
+			android:process="org.treebolic">
+		</service>
 
-        <service
-            android:name=".TreebolicOwlMessengerService"
-            android:process="org.treebolic"
-            android:description="@string/description_service_messenger_bound_service"
-            android:enabled="true"
-            android:exported="true"
-            android:icon="@drawable/ic_launcher"
-            android:label="@string/service_messenger_bound_service"
-            android:permission="android.permission.READ_EXTERNAL_STORAGE" >
-        </service>
-
-    </application>
+	</application>
 
 </manifest>
