--- a/treebolicOwlServices/src/main/AndroidManifest.xml
+++ b/treebolicOwlServices/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
 			android:label="@string/title_activity_settings"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".MainActivity" />
 		</activity>
 
 		<activity
@@ -41,12 +44,18 @@
 			android:label="@string/title_activity_download"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".MainActivity" />
 		</activity>
 
 		<activity
 			android:name="org.treebolic.filechooser.FileChooserActivity"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".MainActivity" />
 		</activity>
 
 		<service
