--- a/treebolicWordNetServices/build.gradle
+++ b/treebolicWordNetServices/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 
     //compile files('libs/commons-compress-proguard-1.8.1.jar')
     compile files('libs/treebolic-provider-wordnet-jwi-nodata.jar')
+    compile files('libs/treebolic-balancer.jar')
 
     compile project(':downloadLib')
     compile project(':preferenceLib')
