--- a/treebolicFilesServices/src/main/AndroidManifest.xml
+++ b/treebolicFilesServices/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/MyTheme"
-		tools:ignore="AllowBackup,UnusedAttribute">
+		tools:ignore="AllowBackup,UnusedAttribute"
+		android:fullBackupContent="@xml/backup_descriptor">
 
 		<activity
 			android:name=".MainActivity"
