--- a/treebolicAidl/build.gradle
+++ b/treebolicAidl/build.gradle
@@ -23,7 +23,7 @@ android {
 apply plugin: 'java'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 sourceCompatibility = "1.7"
