--- a/treebolicServicesIface/build.gradle
+++ b/treebolicServicesIface/build.gradle
@@ -19,15 +19,16 @@ android {
 }
 
 dependencies {
-    compile project(':treebolicParcel')
-    compile project(':treebolicIface')
-    compile project(':treebolicAidl')
-    compile project(':treebolicClientsIface')
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    provided 'com.android.support:appcompat-v7:27.0.2'
+    implementation project(':treebolicLibModel')
+    implementation project(':treebolicParcel')
+    implementation project(':treebolicIface')
+    implementation project(':treebolicAidl')
+    implementation project(':treebolicClientsIface')
 
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    compileOnly 'com.android.support:appcompat-v7:27.0.2'
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
 }
