--- a/treebolicServicesLib/build.gradle
+++ b/treebolicServicesLib/build.gradle
@@ -17,18 +17,18 @@ android {
 }
 
 dependencies {
-    compile project(':treebolicParcel')
-    compile project(':treebolicIface')
-    compile project(':treebolicGlueIface')
-    compile project(':treebolicGlue')
-    compile project(':treebolicGraph')
-    compile project(':treebolicMutable')
-    compile project(':treebolicAidl')
-    compile project(':treebolicServicesIface')
-    compile project(':treebolicClientsIface')
+    implementation project(':treebolicParcel')
+    implementation project(':treebolicIface')
+    implementation project(':treebolicGlueIface')
+    implementation project(':treebolicGlue')
+    implementation project(':treebolicGraph')
+    implementation project(':treebolicMutable')
+    implementation project(':treebolicAidl')
+    implementation project(':treebolicServicesIface')
+    implementation project(':treebolicClientsIface')
 
-    testCompile 'junit:junit:4.12'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 }
