--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
+
     repositories {
         jcenter()
         google()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
 allprojects {
+
     repositories {
         jcenter()
         google()
     }
+
+    ext {
+        versionCode = 24
+        versionName = '2.24'
+        minSdkVersion = 14
+        targetSdkVersion = 27
+        compileSdkVersion = 27
+   }
 }
