--- a/treebolicAidl/build.gradle
+++ b/treebolicAidl/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
-    aidlPackageWhiteList "org/treebolic/services/iface/ITreebolicAIDLService.aidl"
+
+    compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 27
-
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    aidlPackageWhiteList "org/treebolic/services/iface/ITreebolicAIDLService.aidl"
 
     buildTypes {
         release {
