--- a/treebolicFilesServices/src/main/AndroidManifest.xml
+++ b/treebolicFilesServices/src/main/AndroidManifest.xml
@@ -2,9 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
           package="org.treebolic.files.service"
-          android:sharedUserId="org.treebolic.userId"
-          android:versionCode="20"
-          android:versionName="1.20">
+          android:sharedUserId="org.treebolic.userId">
 
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
