--- a/treebolicOwlServices/src/main/AndroidManifest.xml
+++ b/treebolicOwlServices/src/main/AndroidManifest.xml
@@ -3,9 +3,7 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="org.treebolic.owl.service"
           android:installLocation="auto"
-          android:sharedUserId="org.treebolic.userId"
-          android:versionCode="20"
-          android:versionName="1.20">
+          android:sharedUserId="org.treebolic.userId">
 
 	<uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
