--- a/treebolicAidl/build.gradle
+++ b/treebolicAidl/build.gradle
@@ -18,15 +18,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
-/*
-apply plugin: 'java'
-
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-}
-
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
-*/
