--- a/treebolicFilesServices/src/main/AndroidManifest.xml
+++ b/treebolicFilesServices/src/main/AndroidManifest.xml
@@ -8,12 +8,12 @@
 
 	<application
 		android:allowBackup="true"
+		android:fullBackupContent="@xml/backup_descriptor"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/MyTheme"
-		tools:ignore="AllowBackup,UnusedAttribute"
-		android:fullBackupContent="@xml/backup_descriptor">
+		tools:ignore="UnusedAttribute">
 
 		<activity
 			android:name=".MainActivity"
@@ -31,7 +31,7 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity" />
+				android:value=".MainActivity"/>
 		</activity>
 
 		<activity
@@ -40,7 +40,7 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity" />
+				android:value=".MainActivity"/>
 		</activity>
 
 		<service
