--- a/treebolicOwlServices/src/main/AndroidManifest.xml
+++ b/treebolicOwlServices/src/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
 
 	<application
 		android:allowBackup="true"
+		android:fullBackupContent="@xml/backup_descriptor"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/MyTheme"
-		tools:ignore="AllowBackup,UnusedAttribute">
+		tools:ignore="UnusedAttribute">
 
 		<activity
 			android:name=".MainActivity"
@@ -34,7 +35,7 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity" />
+				android:value=".MainActivity"/>
 		</activity>
 
 		<activity
@@ -44,7 +45,7 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity" />
+				android:value=".MainActivity"/>
 		</activity>
 
 		<activity
@@ -53,7 +54,7 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity" />
+				android:value=".MainActivity"/>
 		</activity>
 
 		<service
