--- a/treebolicParcel/build.gradle
+++ b/treebolicParcel/build.gradle
@@ -16,9 +16,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation project(':treebolicMutable')
     implementation project(':treebolicLibModel')
+    implementation 'com.android.support:support-annotations:27.0.2'
 }
