--- a/treebolicFilesServices/src/main/AndroidManifest.xml
+++ b/treebolicFilesServices/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 	<application
 		android:allowBackup="true"
 		android:fullBackupContent="@xml/backup_descriptor"
-		android:icon="@drawable/ic_launcher"
+		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/MyTheme"
@@ -48,7 +48,7 @@
 			android:description="@string/description_service_intent_service"
 			android:enabled="true"
 			android:exported="true"
-			android:icon="@drawable/ic_launcher"
+			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_intent_service"
 			android:permission="android.permission.READ_EXTERNAL_STORAGE"
 			android:process="org.treebolic">
@@ -63,7 +63,7 @@
 			android:description="@string/description_service_aidl_bound_service"
 			android:enabled="true"
 			android:exported="true"
-			android:icon="@drawable/ic_launcher"
+			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_aidl_bound_service"
 			android:permission="android.permission.READ_EXTERNAL_STORAGE"
 			android:process="org.treebolic">
@@ -74,7 +74,7 @@
 			android:description="@string/description_service_messenger_bound_service"
 			android:enabled="true"
 			android:exported="true"
-			android:icon="@drawable/ic_launcher"
+			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_messenger_bound_service"
 			android:permission="android.permission.READ_EXTERNAL_STORAGE"
 			android:process="org.treebolic">
