--- a/treebolicOwlServices/src/main/AndroidManifest.xml
+++ b/treebolicOwlServices/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 	<application
 		android:allowBackup="true"
 		android:fullBackupContent="@xml/backup_descriptor"
-		android:icon="@drawable/ic_launcher"
+		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/MyTheme"
@@ -62,7 +62,7 @@
 			android:description="@string/description_service_intent_service"
 			android:enabled="true"
 			android:exported="true"
-			android:icon="@drawable/ic_launcher"
+			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_intent_service"
 			android:permission="android.permission.READ_EXTERNAL_STORAGE"
 			android:process="org.treebolic">
@@ -77,7 +77,7 @@
 			android:description="@string/description_service_aidl_bound_service"
 			android:enabled="true"
 			android:exported="true"
-			android:icon="@drawable/ic_launcher"
+			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_aidl_bound_service"
 			android:permission="android.permission.READ_EXTERNAL_STORAGE"
 			android:process="org.treebolic">
@@ -88,7 +88,7 @@
 			android:description="@string/description_service_messenger_bound_service"
 			android:enabled="true"
 			android:exported="true"
-			android:icon="@drawable/ic_launcher"
+			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_messenger_bound_service"
 			android:permission="android.permission.READ_EXTERNAL_STORAGE"
 			android:process="org.treebolic">
