--- a/local.properties
+++ b/local.properties
@@ -2,6 +2,8 @@
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
-#
-#Fri Feb 17 14:32:20 CET 2017
-sdk.dir=/opt/androidstudio/sdk
+# For customization when using a Version Control System, please read the
+# header note.
+#Mon Jan 14 10:17:22 CET 2019
+ndk.dir=/opt/androidsdk/ndk-bundle
+sdk.dir=/opt/androidsdk
