--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 14 10:17:22 CET 2019
+#Fri Jun 07 17:07:54 CEST 2019
 ndk.dir=/opt/androidsdk/ndk-bundle
-sdk.dir=/opt/androidsdk
+sdk.dir=/opt/androidstudio/sdk
