--- a/treebolicClientsIface/build.gradle
+++ b/treebolicClientsIface/build.gradle
@@ -26,10 +26,10 @@ android {
 dependencies {
     implementation project(':treebolicLibModel')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
-        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'androidx', module: 'annotation'
     })
 }
