--- a/treebolicServicesLib/build.gradle
+++ b/treebolicServicesLib/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
-        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'androidx', module: 'annotation'
     })
-    implementation 'androidx.annotation:annotation:1.0.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
 }
