--- a/treebolicWordNetServices/build.gradle
+++ b/treebolicWordNetServices/build.gradle
@@ -60,9 +60,9 @@ dependencies {
 
     implementation files('libs/treebolic-provider-wordnet-jwi-nodata.jar')
     implementation files('libs/treebolic-balancer.jar')
-    //implementation files('libs/commons-compress-proguard-1.8.1.jar')
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.preference:preference:1.1.0-beta01'
     implementation 'com.google.android.material:material:1.0.0'
 }
