--- a/treebolicWordNetServices/build.gradle
+++ b/treebolicWordNetServices/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference:1.1.0-beta01'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'org.apache.commons:commons-compress:1.12'
 }
