--- a/treebolicOwlServices/build.gradle
+++ b/treebolicOwlServices/build.gradle
@@ -18,7 +18,7 @@ android {
         versionName rootProject.ext.versionName
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     signingConfigs {
@@ -59,6 +59,9 @@ dependencies {
     implementation project(':downloadLib')
     implementation project(':fileChooserLib')
     implementation project(':preferenceLib')
+    implementation project(':rateLib')
+    implementation project(':othersLib')
+    implementation project(':donateLib')
 
     implementation files('libs/treebolic-provider-owl-owlapi-min.jar')
     //implementation files('libs/treebolic-provider-owl-owlapi.jar')
