--- a/treebolicServicesLib/build.gradle
+++ b/treebolicServicesLib/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     implementation project(':treebolicServicesIface')
     implementation project(':treebolicClientsIface')
 
+    implementation 'androidx.core:core:1.3.1'
     implementation 'androidx.annotation:annotation:1.1.0'
 }
