--- a/treebolicOwlServices/src/main/AndroidManifest.xml
+++ b/treebolicOwlServices/src/main/AndroidManifest.xml
@@ -9,11 +9,13 @@
           android:installLocation="auto"
           android:sharedUserId="org.treebolic.userId">
 
+	<permission android:name="org.treebolic.owl.service.USE" android:protectionLevel="normal" android:label="Use service" />
 	<uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.WAKE_LOCK"/>
+	<uses-permission android:name="org.treebolic.owl.service.USE"/>
 
 	<application
 		android:allowBackup="true"
@@ -87,7 +89,7 @@
 			android:exported="true"
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_intent_service"
-			android:permission="android.permission.READ_EXTERNAL_STORAGE"
+			android:permission="android.permission.BIND_JOB_SERVICE"
 			android:process="org.treebolic">
 			<intent-filter>
 				<action android:name="org.treebolic.service.action.MAKE_MODEL">
@@ -102,7 +104,7 @@
 			android:exported="true"
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_aidl_bound_service"
-			android:permission="android.permission.READ_EXTERNAL_STORAGE"
+			android:permission="org.treebolic.owl.service.USE"
 			android:process="org.treebolic">
 		</service>
 
@@ -113,7 +115,7 @@
 			android:exported="true"
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_messenger_bound_service"
-			android:permission="android.permission.BIND_JOB_SERVICE"
+			android:permission="org.treebolic.owl.service.USE"
 			android:process="org.treebolic">
 		</service>
 
