--- a/treebolicClientsIface/build.gradle
+++ b/treebolicClientsIface/build.gradle
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-    implementation project(':treebolicLibModel')
+    implementation('io.github.treebolic:treebolic-model:4.0-SNAPSHOT')
 
-     implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
 }
