--- a/treebolicParcel/build.gradle
+++ b/treebolicParcel/build.gradle
@@ -32,11 +32,13 @@ android {
 }
 
 dependencies {
-    implementation project(':treebolicMutable')
-    implementation project(':treebolicLibModel')
-    implementation 'androidx.annotation:annotation:1.4.0'
+    implementation ('io.github.treebolic:treebolic-model:4.0-SNAPSHOT')
+    implementation ('io.github.treebolic:treebolic-mutable:4.0-SNAPSHOT')
+
+    implementation project(':treebolicGlue')
+    implementation 'androidx.annotation:annotation:1.5.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
  }
