--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath 'com.android.tools.build:gradle:7.3.1'
     }
 }
 
@@ -17,14 +17,15 @@ allprojects {
     repositories {
         mavenCentral()
         google()
+        maven { url System.getenv('HOME') + "/.m2/repository/" }
     }
 
     ext {
         versionCode = 1
         versionName = '0.1'
         minSdkVersion = 14
-        targetSdkVersion = 32
-        compileSdkVersion = 32
+        targetSdkVersion = 33
+        compileSdkVersion = 33
         multiDexEnabled = true
     }
 
