--- a/treebolicFilesServices/build.gradle
+++ b/treebolicFilesServices/build.gradle
@@ -51,8 +51,11 @@ dependencies {
     implementation project(':treebolicClientsIface')
     implementation project(':treebolicClientsLib')
     implementation project(':treebolicIface')
-    implementation project(':treebolicLibModel')
     implementation project(':treebolicParcel')
+    // implementation project(':treebolicLibModel')
+
+    implementation ('io.github.treebolic:treebolic-model:4.0-SNAPSHOT')
+    implementation ('io.github.treebolic:treebolic-loadbalancer:4.0-SNAPSHOT')
 
     implementation project(':commonLib')
     implementation project(':storageLib')
@@ -63,9 +66,11 @@ dependencies {
     implementation project(':donateLib')
 
     implementation files('libs/treebolic-provider-files.jar')
-    implementation files('libs/treebolic-balancer.jar')
 
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.preference:preference:1.2.0'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
+
+    //TODO remove when bug fixed in appcompat:1.6.0
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 }
