--- a/treebolicAidl/build.gradle
+++ b/treebolicAidl/build.gradle
@@ -12,6 +12,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     aidlPackageWhiteList "org/treebolic/services/iface/ITreebolicAIDLService.aidl"
