--- a/treebolicOwlServices/build.gradle
+++ b/treebolicOwlServices/build.gradle
@@ -40,6 +40,7 @@ android {
     }
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -72,6 +73,8 @@ dependencies {
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'com.google.android.material:material:1.7.0'
 
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.0'
+    implementation "androidx.multidex:multidex:2.0.1"
     //TODO remove when bug fixed in appcompat:1.6.0
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 }
