export namespace from manifest to build.gradle

--- a/treebolicClientsLib/build.gradle
+++ b/treebolicClientsLib/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'com.android.library'
 
 android {
 
+    namespace "org.treebolic.clients"
+
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
