--- a/treebolicClientsLib/src/main/AndroidManifest.xml
+++ b/treebolicClientsLib/src/main/AndroidManifest.xml
@@ -3,5 +3,4 @@
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
-<manifest package="org.treebolic.clients">
-</manifest>
+<manifest/>
