--- a/treebolicAidl/build.gradle
+++ b/treebolicAidl/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'com.android.library'
 
 android {
 
+    namespace "org.treebolic.services.iface.aidl"
+
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
