--- a/treebolicParcel/src/main/AndroidManifest.xml
+++ b/treebolicParcel/src/main/AndroidManifest.xml
@@ -2,5 +2,4 @@
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
-<manifest package="org.treebolic.parcel">
-</manifest>
+<manifest/>
