--- a/treebolicServicesIface/build.gradle
+++ b/treebolicServicesIface/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'com.android.library'
 
 android {
 
+    namespace "org.treebolic.services.iface"
+
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
@@ -30,7 +32,7 @@ android {
 }
 
 dependencies {
-    implementation ('io.github.treebolic:treebolic-model:4.0-SNAPSHOT')
+    implementation('io.github.treebolic:treebolic-model:4.0-SNAPSHOT')
 
     implementation project(':treebolicParcel')
     implementation project(':treebolicIface')
