--- a/treebolicWordNetServices/build.gradle
+++ b/treebolicWordNetServices/build.gradle
@@ -10,6 +10,8 @@ keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
 
+    namespace "org.treebolic.wordnet.service"
+
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
